@@ -3,6 +3,9 @@
 	when used in if statements
 	* client/common/client.c, server/pregame.c: Enable sending the bank by
 	the server
+	* client/gtk/gui.c(gui_highlight_chits),
+	client/gtk/guimap.c(guimap_highlight_chits): Enable highlighted chits
+	when reconnected.
 
 2004-11-21  0.8.1.43  Roland Clobus <rclobus@bigfoot.com>
 	* client/gtk/offline.c(frontend_offline): Game|Connect incorrectly
